--- a/content/publication/icra2023/cite.bib
+++ b/content/publication/icra2023/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
-}
+@INPROCEEDINGS{10161148,
+  author={Chen, Mingcong and Huang, Yuanrui and Chen, Jian and Zhou, Tongxi and Chen, Jiuan and Liu, Hongbin},
+  booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Fully Robotized 3D Ultrasound Image Acquisition for Artery}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={2690-2696},
+  doi={10.1109/ICRA48891.2023.10161148}}
